# fathom

./: .codespellignore  .git-blame-ignore-revs  .gitattributes  .gitignore  .lycheeignore  .markdownlint.jsonc  .pre-commit-config.yaml  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  REVIEW.md  SECURITY.md  design.md  mkdocs.yml  openapi.json  pyproject.toml  release-please-config.json  robots.txt  versions.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: autofix.yml  ci.yml  dependabot-auto-approve.yml  dependabot-auto-merge.yml  docs-deploy.yml  docs.yml  go-ci.yml  main-health.yml  npm-publish.yml  pypi-publish.yml  release-please-docs.yml  release-please.yml  ts-ci.yml
0.3/: 404.html  index.html  llms.txt  objects.inv  sitemap.xml
0.3.1/: 404.html  changelog.json  index.html  sitemap.xml
0.3.1/_index/: index.html
0.3.1/concepts/: index.html
0.3.1/getting-started/: index.html
0.3.1/how-to/: index.html
0.3.1/reference/: index.html
0.3.1/search/: search_index.json
0.3.1/tutorials/: index.html
0.3/concepts/: index.html
0.3/getting-started/: index.html
0.3/how-to/: index.html
0.3/reference/: index.html  release-signing-pubkey.minisig
0.3/search/: search_index.json
0.3/tutorials/: index.html
0.5/: 404.html  index.html  llms-full.txt  objects.inv  sitemap.xml
0.5/concepts/: index.html
0.5/getting-started/: index.html
0.5/how-to/: index.html
0.5/reference/: index.html  release-signing-pubkey.minisig
0.5/search/: search_index.json
0.5/tutorials/: index.html
0.6/: 404.html  index.html  llms-full.txt  objects.inv  sitemap.xml
0.6/concepts/: index.html
0.6/getting-started/: index.html
0.6/how-to/: index.html
0.6/integration/: index.html
0.6/reference/: index.html
0.6/search/: search_index.json
0.6/tutorials/: index.html
0.7/: 404.html  index.html  llms-full.txt  robots.txt  sitemap.xml
0.7/concepts/: index.html
0.7/getting-started/: index.html
0.7/how-to/: index.html
0.7/reference/: index.html
0.7/search/: search_index.json
0.7/tutorials/: index.html
docs/: CNAME  _index.md  changelog.json  getting-started.md  index.md  llms-full.txt  llms.txt
docs/_prompts/: audit.md  lint.md  update.md
docs/api/: attestation.md  audit.md  compiler.md  engine.md  evaluator.md  facts.md
docs/concepts/: index.md  (+5 more)
examples/: README.md
latest/: 404.html  changelog.json  index.html  llms-full.txt  llms.txt  objects.inv  sitemap.xml
protos/: fathom.proto
scripts/: changelog_to_json.py  check_doc_sources.py  check_docstrings.py  check_frontmatter.py  check_sdk_coverage.py  check_version_sync.py  dco_signoff.sh  export_json_schemas.py  export_openapi.py  generate_cli_docs.py  generate_go_sdk_docs.py  generate_grpc_docs.py  generate_llms_txt.py  generate_mcp_manifest.py  generate_postman_collection.py  generate_python_sdk_docs.py  generate_rule_pack_docs.py  generate_ssvc_rules.py  generate_ts_sdk_docs.py  live-test.sh  publish.sh  sign_release.sh  verify_tutorial_snippets.py
tests/: conftest.py  test_attestation.py  test_attestation_sign_event.py  test_audit.py  test_auth.py  test_backward_chaining.py  test_chained_log.py  test_classification_integration.py  test_classification_ops.py  test_cli.py  test_cli_repl.py  test_cmmc_pack.py  test_compiler_functions.py  test_compiler_modules.py  test_compiler_rules.py  test_compiler_templates.py  test_crewai.py  test_engine.py  test_engine_reload.py  test_evaluator.py  test_facts.py  test_fleet.py  test_google_adk.py  test_grpc_auth.py  test_hipaa_pack.py  test_integration.py  test_langchain.py  test_mcp.py  test_metadata_roundtrip.py  test_metrics.py  test_models.py  test_nist_pack.py  test_openai_agents.py  test_owasp_pack.py  test_paths.py  test_property_based.py  test_release_sig.py  test_rest.py  test_rest_auth.py  test_rest_editor.py  (+8 more)
(+762 files in other folders)
